Fix z-index order which fixes some shadows.

--- a/packages/grid/src/features/standard-table/components/StandardTable.module.css
+++ b/packages/grid/src/features/standard-table/components/StandardTable.module.css
@@ -9,10 +9,10 @@
   --swui-sticky-column-shadow-left: -4px 2px 4px 0 rgba(0, 0, 0, 0.05);
   --swui-sticky-header-z-index: 1;
   --swui-sticky-column-z-index: 2;
-  --swui-sticky-header-in-sticky-column-z-index: 3;
-  --swui-sticky-header-column-group-z-index: 4;
-  --swui-sticky-popover-z-index: 5;
-  --swui-sticky-column-group-label-z-index: 6;
+  --swui-sticky-header-column-group-z-index: 3;
+  --swui-sticky-column-group-label-z-index: 4;
+  --swui-sticky-header-in-sticky-column-z-index: 5;
+  --swui-sticky-popover-z-index: 6;
   --swui-expand-cell-width: 45px;
   --swui-checkbox-cell-width: 45px;
   --swui-expand-highlight-border-width: 2px;
